--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>BusTrack</title>
+
+    <!-- Favicons: file is in /public so it’s available at /sihlogo.jpg -->
+    <link rel="icon" href="/sihlogo.jpg" type="image/jpeg" />
+    <link rel="apple-touch-icon" href="/sihlogo.jpg" />
+    <!-- Optional theming/preview -->
+    <meta name="theme-color" content="#0b0f19" />
+    <meta property="og:title" content="BusTrack" />
+    <meta property="og:image" content="/sihlogo.jpg" />
   </head>
   <body>
     <div id="root"></div>
